--- a/app/templates/_partials/base.html
+++ b/app/templates/_partials/base.html
@@ -17,7 +17,7 @@
             <title>Flexy Admin Lite Template by WrapPixel</title>
             <link rel="canonical" href="https://www.wrappixel.com/templates/Flexy-admin-lite/" />
             <!-- Favicon icon -->
-            <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/images/favicon.png' %}">
+            <link rel="icon" type="image/png" style="width: 200px; height: 200px" href="{% static 'assets/images/favicon.png' %}">
             <!-- Custom CSS -->
             <link href="{% static 'assets/libs/chartist/dist/chartist.min.css' %}" rel="stylesheet">
             <link href="{% static 'assets/libs/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.css' %}" rel="stylesheet">
@@ -25,11 +25,26 @@
             {% endblock styles %}
 
 		{% block stylepage %}
-         <!-- <style>
-            .footer-widget ul li a{
+         <style>
+            /* .footer-widget ul li a{
                font-size: 15px;
+            } */
+
+            .logo-text {
+                display: flex;
+                align-items: center;
             }
-         </style> -->
+
+            .logo-text img {
+                width: 20px;
+                margin-right: 5px;
+                margin-left: -25px;
+            }
+
+            .logo-text h4 {
+                margin: 0;
+            }
+         </style>
 		{% endblock stylepage %}
 
 	</head>
@@ -64,9 +79,9 @@
                             <!-- Logo text -->
                             <span class="logo-text">
                                 <!-- dark Logo text -->
-                                <!-- <img src="../assets/images/logo-text.png" alt="homepage" class="dark-logo" /> -->
+                                <img src="{% static 'assets/images/favicon.png' %}" style="width: 30px;" alt="homepage" class="dark-logo" />
                                 <!-- Light Logo text -->
-                                <!-- <img src="../assets/images/logo-light-text.png" class="light-logo" alt="homepage" /> -->
+                                <img src="{% static 'assets/images/favicon.png' %}" style="width: 30px;" class="light-logo" alt="homepage" />
                                 <h4>Clean City</h4>
                             </span>
                         </a>
