ajout d'un bouton logout

--- a/app/templates/_partials/navbar1.html
+++ b/app/templates/_partials/navbar1.html
@@ -34,6 +34,9 @@
                     <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                             href="{% url 'find_paid_users' %}" aria-expanded="false"><i class="mdi mdi-account-check"></i><span
                                 class="hide-menu">Active Client</span></a></li>
+                    <li class="text-center p-40 upgrade-btn mt-4 mb-4">
+                        <a href="{% url 'company_logout' %}" class="btn d-block w-100 btn-info text-white" >Logout</a>
+                    </li>
                     <!-- <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                             href="table-basic.html" aria-expanded="false"><i class="mdi mdi-border-all"></i><span
                                 class="hide-menu">Table</span></a></li>
