--- a/app/templates/_partials/navbar.html
+++ b/app/templates/_partials/navbar.html
@@ -67,6 +67,9 @@
                     <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                             href="{% url 'submit_payment' %}" aria-expanded="false"><i class="mdi mdi-cash-100"></i><span
                                 class="hide-menu">Payment</span></a></li>
+                    <li class="text-center p-40 upgrade-btn mt-4 mb-4">
+                        <a href="{% url 'user_logout' %}" class="btn d-block w-100 btn-info text-white" >Logout</a>
+                    </li>
                     <!-- <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                             href="table-basic.html" aria-expanded="false"><i class="mdi mdi-border-all"></i><span
                                 class="hide-menu">Table</span></a></li>
