modification des couleurs

--- a/app/templates/_partials/base1.html
+++ b/app/templates/_partials/base1.html
@@ -64,7 +64,7 @@
                         <!-- ============================================================== -->
                         <!-- Logo -->
                         <!-- ============================================================== -->
-                        <a class="navbar-brand" href="{% url 'company-dashboard' %}">
+                        <a class="navbar-brand" href="{% url 'company_dashboard' %}">
                             <!-- Logo icon -->
                             <b class="logo-icon">
                                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -103,13 +103,13 @@
                             <!-- ============================================================== -->
                             <!-- Search -->
                             <!-- ============================================================== -->
-                            <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark"
+                            <!-- <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark"
                                     href="javascript:void(0)"><i class="mdi mdi-magnify me-1"></i> <span class="font-16">Search</span></a>
                                 <form class="app-search position-absolute">
                                     <input type="text" class="form-control" placeholder="Search &amp; enter"> <a
                                         class="srh-btn"><i class="mdi mdi-window-close"></i></a>
                                 </form>
-                            </li>
+                            </li> -->
                         </ul>
                         <!-- ============================================================== -->
                         <!-- Right side toggle and nav items -->
