--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -83,13 +83,10 @@
     <section class="vertical-center py-3 py-md-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+                <div class="col-12 col-md-10 col-md-9 fixed">
                     <div class="card border border-light-subtle rounded-3 shadow-sm">
                         <div class="card-body p-3 p-md-4 p-xl-5">
                             <div class="text-center mb-3">
-                                <!-- <a href="#!">
-                                <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57">
-                                </a> -->
                                 <h3>Clean City</h3>
                             </div>
                             <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Sign in to your account</h2>
