--- a/app/templates/_partials/navbar.html
+++ b/app/templates/_partials/navbar.html
@@ -21,12 +21,21 @@
     color: #fff;
 }
 
+.sidebar-nav ul .sidebar-item.selected>.sidebar-link{
+    background-color: #A4DC8A;
+}
+
 /* .floating-btn:hover, .floating-btn:focus {
     background-color: #0056b3; 
     color: white; 
     text-decoration: none;
     outline: none; 
 } */
+
+
+.dark-theme .left-sidebar {
+    background-color: #123456; /* Darker color for dark themes */
+}
 
 </style>
 <!-- <div class="preloader">
@@ -68,7 +77,7 @@
                             href="{% url 'submit_payment' %}" aria-expanded="false"><i class="mdi mdi-cash-100"></i><span
                                 class="hide-menu">Payment</span></a></li>
                     <li class="text-center p-40 upgrade-btn mt-4 mb-4">
-                        <a href="{% url 'user_logout' %}" class="btn d-block w-100 btn-info text-white" >Logout</a>
+                        <a href="{% url 'user_logout' %}" style="background-color: #A4DC8A; border: 1px solid #A4DC8A" class="btn d-block w-100 btn-info text-white" >Logout</a>
                     </li>
                     <!-- <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
                             href="table-basic.html" aria-expanded="false"><i class="mdi mdi-border-all"></i><span
