--- a/app/templates/user/company-login.html
+++ b/app/templates/user/company-login.html
@@ -83,7 +83,7 @@
     <section class="vertical-center py-3 py-md-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+                <div class="col-12 col-sm-10 col-md-9">
                     <div class="card border border-light-subtle rounded-3 shadow-sm">
                         <div class="card-body p-3 p-md-4 p-xl-5">
                             <div class="text-center mb-3">
