--- a/app/templates/user/company-register.html
+++ b/app/templates/user/company-register.html
@@ -194,7 +194,7 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-10 col-md-8 col-lg-8 col-xl-7 col-xxl-6">
+                <div class="col-12 col-sm-10 col-md-9">
                     <div class="card border border-light-subtle rounded-3 shadow-sm">
                         <div class="card-body p-3 p-md-6 p-xl-5">
                             <div class="text-center mb-3">
