ajout de logo sur le login ajout du login required ajout des default images

--- a/app/templates/user/company-login.html
+++ b/app/templates/user/company-login.html
@@ -90,7 +90,7 @@
                                 <!-- <a href="#!">
                                 <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57">
                                 </a> -->
-                                <h3>Clean City</h3>
+                                <h3><img src="{% static 'assets/images/favicon.png' %}" style="width: 50px; margin-top: -10px; margin-right: 10px;" class="light-logo" alt="homepage" />Clean City</h3>
                             </div>
                             <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Sign in to your account</h2>
                             <form action="{% url 'company_login' %}" method="post">
