--- a/app/templates/user/company-register.html
+++ b/app/templates/user/company-register.html
@@ -198,7 +198,7 @@
                     <div class="card border border-light-subtle rounded-3 shadow-sm">
                         <div class="card-body p-3 p-md-6 p-xl-5">
                             <div class="text-center mb-3">
-                                <h3>Clean City</h3>
+                                <h3><img src="{% static 'assets/images/favicon.png' %}" style="width: 50px; margin-top: -10px; margin-right: 10px;" class="light-logo" alt="homepage" />Clean City</h3>
                             </div>
                             <h2 class="fs-6 fw-normal text-center text-secondary mb-4">Sign up to your account</h2>
                             <form action="{% url 'company_register' %}" method="post">
